# HabitTracker_v2

./: .env_sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  send_bot.py
.github/: deploy.yml
.github/workflows/: ci.yml  deploy.yml
config/: settings.py  settings_ci.py  urls.py
habit_tracker/: models.py  pagination.py  serializers.py  tasks.py  tests.py  urls.py  views.py
habit_tracker/migrations/: 0001_initial.py  0002_initial.py
habit_tracker/nginx/: Dockerfile
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
