[project]
name = "habittracker-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "rybin",email = "rybin.32@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "redis (>=8.0.0,<9.0.0)",
    "django-redis (>=7.0.0,<8.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-filter (>=25.2,<26.0)",
    "drf-yasg (>=1.21.15,<2.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "coverage (>=7.14.2,<8.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "django-celery-beat (>=2.9.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
